# EWAHBoolArray

./: .appveyor.yml  .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README  README.md  annotated.html  annotated_dup.js  boolarray_8h_source.html  classes.html  classewah_1_1_bitmap_statistics-members.html  classewah_1_1_bitmap_statistics.html  classewah_1_1_bool_array-members.html  classewah_1_1_bool_array.html  classewah_1_1_bool_array.js  classewah_1_1_buffered_running_length_word-members.html  classewah_1_1_buffered_running_length_word.html  classewah_1_1_buffered_running_length_word.js  classewah_1_1_const_running_length_word-members.html  classewah_1_1_const_running_length_word.html  classewah_1_1_const_running_length_word.js  classewah_1_1_e_w_a_h_bool_array-members.html  classewah_1_1_e_w_a_h_bool_array.html  classewah_1_1_e_w_a_h_bool_array.js  classewah_1_1_e_w_a_h_bool_array_iterator-members.html  classewah_1_1_e_w_a_h_bool_array_iterator.html  classewah_1_1_e_w_a_h_bool_array_iterator.js  classewah_1_1_e_w_a_h_bool_array_raw_iterator-members.html  classewah_1_1_e_w_a_h_bool_array_raw_iterator.html  classewah_1_1_e_w_a_h_bool_array_set_bit_forward_iterator-members.html  classewah_1_1_e_w_a_h_bool_array_set_bit_forward_iterator.html  classewah_1_1_e_w_a_h_bool_array_set_bit_forward_iterator.js  classewah_1_1_running_length_word-members.html  classewah_1_1_running_length_word.html  classewah_1_1_running_length_word.js  dir_d40eab382f5bc9cf78b6a41398459012.html  dir_d40eab382f5bc9cf78b6a41398459012.js  dir_d44c64559bbebec7f509842c48db8b23.html  (+21 more)
.github/worflows/: alpine.yml  mingw-ci.yml  mingw64-ci.yml  msys2.yml  vs16-clang-ci.yml
.github/workflows/: alpine.yml  documentation.yml  msys2-clang.yml  ubuntu18.yml  ubuntu20.yml  ubuntu24.yml  vs16-ci.yml  vs16-clang-ci.yml  vs17-ci.yml  vs17-clang-ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: ewah-config.cmake.in  ewah-flags.cmake
data/: data.csv
data/bitmap_dumps/: 10000  101000  105000  106000  110000  113000  117000  118000  12000  126000  13000  132000  145000  147000  16000  2000  21000  26000  27000  30000  32000  36000  38000  39000  40000  43000  47000  51000  6000  64000  67000  69000  72000  79000  82000  87000  9000  90000  96000  98000  (+1 more)
examples/: CMakeLists.txt  example.cpp  example2.cpp  example3.cpp
headers/: boolarray.h  ewah.h  ewahutil.h  runninglengthword.h  simplevector.h
include/ewah/: boolarray.h  ewah-inl.h  ewah.h  ewahutil.h  runninglengthword.h
scripts/: release.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  (+7 more)
src/: CMakeLists.txt  benchmark.cpp  unit.cpp
tests/: CMakeLists.txt  unit.cpp
tests/data/bitmap_dumps/: 1000  100000  108000  109000  11000  112000  114000  116000  119000  120000  122000  123000  124000  125000  127000  128000  129000  135000  136000  139000  14000  141000  142000  143000  144000  148000  149000  15000  150000  17000  18000  19000  20000  23000  24000  3000  33000  35000  4000  41000  (+25 more)
tests/install/: CMakeLists.txt
